# kubetail

./: CLUSTER_AGENT_RUST.md  ORIGINAL_CAR.md  RESEARCH_ANALYSIS.md
crates/cluster-agent/: Cargo.toml  build.rs
crates/cluster-agent/src/: config.rs  file_watcher.rs  grpc_server.rs  kubernetes.rs  main.rs  rgkl_integration.rs
crates/cluster-agent/src/grpc_server/: log_metadata_service.rs  log_records_service.rs
crates/rgkl/: Cargo.toml
crates/rgkl/src/: lib.rs
