[package]
name = "kubetail-cluster-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

# gRPC framework
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-health = "0.12"

# Kubernetes client
kube = { version = "0.91", features = ["client", "derive"] }
k8s-openapi = { version = "0.22", features = ["v1_28"] }

# File system notifications
notify = "6.1"
crossbeam-channel = "0.5"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }

# Command line parsing
clap = { version = "4.0", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.0"

# RGKL integration (CRITICAL: Direct library integration instead of exec.Command!)
rgkl = { path = "../rgkl" }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
